fix(input): convert ISO-8859-1 pages to UTF-8
TODO: Fix characters \x91-\x99.

--- a/input/016.html
+++ b/input/016.html
@@ -38,7 +38,7 @@ to illustrate some of the points.
 marauding post-Y2K fanatics. Build an army
 of dangerous servo robots with stuff from
 <a href="https://web.archive.org/web/20100929153127/http://www.parallaxinc.com/">Parallax</a>
-and plenty of <a href="https://web.archive.org/web/20100929153127/http://www.dupont.com/afs/">Kevlar®</a>
+and plenty of <a href="https://web.archive.org/web/20100929153127/http://www.dupont.com/afs/">KevlarÂ®</a>
 <br/><font size="-2">to <a href="/web/20100929153127/http://memepool.com/Subject/Robotics/">Robotics</a> by <a href="https://web.archive.org/web/20100929153127/http://memepool.com/Author/obvious/">obvious</a></font></font></td></tr></table><table cellspacing="4" cellpadding="4"><tr><td bgcolor="#ffffff" align="right" valign="top" width="100"><font face="Arial,helvetica" color="#000000"></font></td> <td bgcolor="#dddddd" align="left" valign="center" width="500"><font face="Arial,helvetica" color="#000000">Need something stupid, annoying, and out of
 style?  Try
 <a href="https://web.archive.org/web/20100929153127/http://web.nmsu.edu/~jlillibr/ClickableBeavis/">Clickable Beavis</a>.<br/><font size="-2">to <a href="/web/20100929153127/http://memepool.com/Subject/Art/">Art</a> by <a href="https://web.archive.org/web/20100929153127/http://memepool.com/Author/tjs/">tjs</a></font></font></td></tr></table><table cellspacing="4" cellpadding="4"><tr><td bgcolor="#ffffff" align="right" valign="top" width="100"><font face="Arial,helvetica" color="#000000"></font></td> <td bgcolor="#ffffff" align="left" valign="center" width="500"><font face="Arial,helvetica" color="#000000">You've just heard about a horrible disaster.
