--- a/input/030.html
+++ b/input/030.html
@@ -136,7 +136,7 @@ Dan.
 deep karma canyon</a>, why not visit <a href="https://web.archive.org/web/20100929042407/http://www.bobmould.com/">Bob Mould's
 web site</a>, and find out what's going through the mind of the creative visionary
 behind seminal wall-of-noise band <a href="https://web.archive.org/web/20100929042407/http://www-2.roughguides.com/rock/entries/entries-h/HUSKER_DU.html">
-Hüsker Dü</a>?
+HÃ¼sker DÃ¼</a>?
 <br/><font size="-2">to <a href="/web/20100929042407/http://memepool.com/Subject/Music/">Music</a> by <a href="https://web.archive.org/web/20100929042407/http://memepool.com/Author/peterb/">peterb</a></font></font></td></tr></table><table cellspacing="4" cellpadding="4"><tr><td bgcolor="#ffffff" align="right" valign="top" width="100"><font face="Arial,helvetica" color="#000000"></font></td> <td bgcolor="#ffffff" align="left" valign="center" width="500"><font face="Arial,helvetica" color="#000000">Apparently, the true meaning of The Force is a matter under some debate.
 While there are those who view The Force as 
 <a href="https://web.archive.org/web/20100929042407/http://www.geocities.com/Hollywood/Lot/9202/">evil</a>,  there are also those on
