--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
 </head>
 <body>
 <script>
+  var format = function(n) {
+    return (n < 10 ? "0" : "") + n.toString();
+  }
+
   var date = new Date();
-  var month = date.getMonth();
-  var day = date.getDay();
-  if (month < 10) { month = "0" + month; }
-  if (day < 10) { day = "0" + day; }
+  var month = date.getMonth() + 1;
+  var day = date.getDate();
+
   var dir = location.href.replace(/index\.html$/, "");
-  location.href = dir + "date/" + month + "-" + day;
+
+  location.href = dir + "date/" + format(month) + "-" + format(day);
 </script>
 <noscript>
   <h1>No JavaScript? Pick a date.</h1>
